[tool.poetry]
name = "preston"
version = "4.6.0"
description = "EVE ESI API access tool"
authors = ["Celeo <mattboulanger@fastmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Celeo/Preston"
repository = "https://github.com/Celeo/Preston"
keywords = ["eve online", "eve", "esi"]
classifiers = [
  "Environment :: Console",
  "Environment :: Web Environment",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]
packages = [{ include = "preston" }]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
