[project]
name = "preston"
version = "4.12.1"
description = "EVE ESI API access tool"
authors = [
    { name = "Celeo", email = "mattboulanger@fastmail.com" }
]
license = "MIT"
readme = "README.md"
keywords = [
    "eve online",
    "eve",
    "esi",
]
classifiers = [
    "Environment :: Console",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "cryptography>=44.0.3",
    "pyjwt>=2.9.0",
    "requests==2.32.3",
]

[project.urls]
homepage = "https://github.com/Celeo/Preston"
repository = "https://github.com/Celeo/Preston"

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.4.3",
    "pytest-cov<5.0.0,>=4.1.0",
    "ruff<1.0.0,>=0.1.5",
]
